--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,14 @@
   "description": "TranslationManager is a package for easy management translation strings in laravel. It has the ability to perform the translation on the console or to create an export with all the strings that can later be imported again.",
   "license": "MIT",
   "version": "0.1",
-  "type": "project",
+  "type": "library",
   "homepage": "http://www.nodus-framework.de/",
   "keywords": [
     "laravel",
-    "translation"
+    "translation",
+    "artisan",
+    "translation",
+    "localization"
   ],
   "authors": [
     {
@@ -27,8 +30,7 @@
   },
   "require": {
     "php": ">=7.1.3",
-    "laravel/framework":"^5.5"
-
+    "laravel/framework": "^5.5"
   },
   "extra": {
     "laravel": {
