--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   },
   "require": {
     "php": ">=7.1.3",
-    "laravel/framework": "^5.5"
+    "laravel/framework": ">=5.5"
   },
   "require-dev": {
     "aws/aws-sdk-php": "3.9.*"
